<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.order.AddOrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/appbar_elevation"
        android:gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/title_add_order_screen" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtCustomerNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_customer_name">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/order_list_item_layout" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddItem"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_button_height"
                android:text="@string/title_add_items"
                app:cornerRadius="@dimen/margin_16"
                app:elevation="@dimen/appbar_elevation" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paymentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:hint="@string/title_payment">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_down"
                    android:editable="false"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/discountLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:hint="@string/title_discount">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_down"
                    android:editable="false"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/discountFlatLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:hint="@string/title_flat_discount">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFlatDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/advanceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:hint="@string/title_advance_payment">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAdvance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paidLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:hint="@string/title_paid_amount">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPaid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnInvoice"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_button_height"
                android:text="@string/title_generate_invoice"
                app:cornerRadius="@dimen/margin_16"
                app:elevation="@dimen/appbar_elevation" />

            <View
                android:layout_width="match_parent"
                android:layout_height="64dp" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>